# meijie-wasm

./: .gitignore  .gitmodules  .tool-versions  README.md  package-lock.json  package.json
cpp/: CMakeLists.txt  README.md  linuxDeformationBuild.sh  linuxDracoBuild.sh  winDracoBuild.ps1  winDracoWasmBuild.ps1  winTest.ps1
cpp/bgfx/: CMakeLists.txt  CMakePresets.json
cpp/bgfx/app/: CMakeLists.txt  main.cpp
cpp/cad/: CMakeLists.txt  CMakePresets.json
cpp/cad/deformation/: CMakeLists.txt
cpp/deformation/: CMakeLists.txt  READMD.md  laplacian_deformation.cpp
cpp/draco/: CMakeLists.txt  CMakePresets.json  parser.cpp
cpp/draco/app1/: CMakeLists.txt  CMakePresets.json  parser.cpp
cpp/entt/: CMakeLists.txt  CMakePresets.json
cpp/entt/app1/: CMakeLists.txt  main.cpp
cpp/entt/app2/: CMakeLists.txt  d1.cpp  d2.cpp  main.cpp  org1.cpp  org2.cpp
cpp/lang/: CMakeLists.txt  CMakePresets.json  README.md
cpp/lang/appC/: CMakeLists.txt  main.c  quad.c
cpp/lang/appCpp/: CMakeLists.txt  main.cpp
cpp/opengl/: CMakeLists.txt  CMakePresets.json  README.md
cpp/opengl/App/: CMakeLists.txt
cpp/opengl/App/Shaders/: Compute.glsl
cpp/ota/: Dockerfile  run.sh
cpp/ota/app1/: CMakeLists.txt
cpp/ota/app1/src/: App.cpp  handler.h
cpp/solvespace/: CMakeLists.txt  CMakePresets.json
cpp/tools/: CMakeLists.txt  CMakePresets.json
cpp/tools/include/: tri_tri_intersect.h
cpp/tools/lib/: index.html  runTest.sh  wasmTriTri.d.ts  wasmTriTri.js  wasmTriTri.wasm  wasm_tri_tri.d.ts  wasm_tri_tri.js  wasm_tri_tri.wasm
cpp/tools/src/: app_tri_tri.cpp  tri_tri_intersect.c
cpp/tools/src/wasm/: shared.cpp  shared.hpp
cpp/web/dev-emcc/: Dockerfile  readme.md  run.sh
cpp/web/dev-ota/: run.sh
scripts/: common.mjs  setup_third.mjs  setup_wasm_deps.mjs
